# openenv-customer-support

./: .env.example  .gitignore  Dockerfile  FINAL_SUBMISSION_CHECKLIST.md  HF_BLOG_POST.md  JUDGE_QA.md  README.md  ablation_eval.py  evaluate_models.py  frontierops_training_lab.ipynb  inference.py  openenv.yaml  pitch_deck.md  pyproject.toml  requirements.txt  test_api.py  test_api_key.py  test_env.py  train.py  train_colab.ipynb
results/: ablation_hack_penalty.json  final_baseline_vs_trained.json  final_summary_stats.json  frontier_scorecard_smoke.json  frontier_scorecard_smoke.md  judge_scorecard.md  phase1_smoke_eval.json  scorecard_report.json
server/: app.py  dashboard.html  history.html
src/: agent.py  customer_support_env.py  mock_api_stack.py  mock_data_fixtures.py  policy_rules.py  telemetry.py  toolhub.py  voice_stack.py
tasks/: grader.py
